--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,12 @@
-body {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -16,7 +23,8 @@ code {
 .main-container {
   position: relative;
   background-color: #0d1116;
-
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -91,6 +99,22 @@ p, a, h1, h2, h3, h4, h5, label, button {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+// Mobile responsive fixes
+@media screen and (max-width: 480px) {
+  body {
+    font-size: 1rem !important;
+  }
+
+  .main-container {
+    padding: 0;
+    margin: 0;
+  }
+
+  * {
+    max-width: 100%;
+  }
 }
 
 .light-mode {
